# RAG_TATURIAL

./: .gitignore  pyproject.toml  requirement.txt  requirements.txt
0-DataIngetParser/: 1-ingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsindoc.ipynb  4-csvexcelparsing.ipynb
0-DataIngetParser/data/text_files/: python_intro.txt
0-DataIngetParser/data/word_files/: Proposal.docx
1-VectorEmbesddingAnd Databases/: embedding.ipynb  openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb
2-Vector Stores/data/: doc_0.txt  doc_1.txt  doc_2.txt
text_files/: machin_learning.txt
